--- a/public/style.css
+++ b/public/style.css
@@ -615,6 +615,10 @@ video {
   height: 100%;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .min-h-96 {
   min-height: 24rem;
 }
@@ -626,6 +630,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .translate-x-1\/2 {
@@ -650,6 +658,10 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-3 {
@@ -704,6 +716,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -718,6 +734,15 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .gap-x-5 {
@@ -753,6 +778,10 @@ video {
   border-left-width: 1px;
 }
 
+.border-t {
+  border-top-width: 1px;
+}
+
 .bg-CustomOrange {
   --tw-bg-opacity: 1;
   background-color: rgb(255 149 0 / var(--tw-bg-opacity, 1));
@@ -761,6 +790,10 @@ video {
 .bg-customWhite {
   --tw-bg-opacity: 1;
   background-color: rgb(241 241 243 / var(--tw-bg-opacity, 1));
+}
+
+.bg-darkCustomGrey\/25 {
+  background-color: rgb(38 38 38 / 0.25);
 }
 
 .bg-lightCustomOrange {
@@ -778,12 +811,32 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-darkCustomGrey\/50 {
-  background-color: rgb(38 38 38 / 0.5);
+.bg-gray-300\/10 {
+  background-color: rgb(209 213 219 / 0.1);
 }
 
-.bg-darkCustomGrey\/25 {
-  background-color: rgb(38 38 38 / 0.25);
+.bg-gray-300\/20 {
+  background-color: rgb(209 213 219 / 0.2);
+}
+
+.bg-gray-300\/15 {
+  background-color: rgb(209 213 219 / 0.15);
+}
+
+.bg-gray-200\/15 {
+  background-color: rgb(229 231 235 / 0.15);
+}
+
+.bg-gray-200\/20 {
+  background-color: rgb(229 231 235 / 0.2);
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -792,6 +845,10 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-1 {
@@ -832,6 +889,26 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .pb-20 {
@@ -881,6 +958,16 @@ video {
   line-height: 1rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -898,6 +985,11 @@ video {
   color: rgb(255 149 0 / var(--tw-text-opacity, 1));
 }
 
+.text-darkCustomGrey {
+  --tw-text-opacity: 1;
+  color: rgb(38 38 38 / var(--tw-text-opacity, 1));
+}
+
 .text-lightCustomGrey {
   --tw-text-opacity: 1;
   color: rgb(76 76 77 / var(--tw-text-opacity, 1));
@@ -906,11 +998,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-darkCustomGrey {
-  --tw-text-opacity: 1;
-  color: rgb(38 38 38 / var(--tw-text-opacity, 1));
 }
 
 .transition-all {
@@ -951,9 +1038,8 @@ video {
   background-color: rgb(255 149 0 / 0.05);
 }
 
-.hover\:bg-CustomOrangesecondary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 146 51 / var(--tw-bg-opacity, 1));
+.hover\:bg-CustomOrange\/85:hover {
+  background-color: rgb(255 149 0 / 0.85);
 }
 
 .hover\:bg-gray-100:hover {
@@ -965,30 +1051,9 @@ video {
   background-color: rgb(76 76 77 / 0.25);
 }
 
-.hover\:bg-CustomOrange\/50:hover {
-  background-color: rgb(255 149 0 / 0.5);
-}
-
-.hover\:bg-CustomOrange\/75:hover {
-  background-color: rgb(255 149 0 / 0.75);
-}
-
-.hover\:bg-CustomOrange\/95:hover {
-  background-color: rgb(255 149 0 / 0.95);
-}
-
-.hover\:bg-CustomOrange\/85:hover {
-  background-color: rgb(255 149 0 / 0.85);
-}
-
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-darkCustomGrey:hover {
-  --tw-text-opacity: 1;
-  color: rgb(38 38 38 / var(--tw-text-opacity, 1));
 }
 
 .hover\:shadow-custom-btn:hover {
@@ -1007,21 +1072,6 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-md:hover {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:bg-darkCustomGrey:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity, 1));
-}
-
-.focus\:bg-darkCustomGrey\/50:focus {
-  background-color: rgb(38 38 38 / 0.5);
 }
 
 @media (min-width: 640px) {
@@ -1073,6 +1123,16 @@ video {
   .sm\:gap-6 {
     gap: 1.5rem;
   }
+
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1108,6 +1168,10 @@ video {
     gap: 1.5rem;
   }
 
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
   .md\:p-10 {
     padding: 2.5rem;
   }
@@ -1131,6 +1195,21 @@ video {
     padding-bottom: 1rem;
   }
 
+  .md\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1139,6 +1218,21 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
@@ -1159,13 +1253,36 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .lg\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
   }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1192,5 +1309,25 @@ video {
   .\33xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .\33xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .\33xl\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .\33xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .\33xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
