add hover effect in form btn

--- a/public/style.css
+++ b/public/style.css
@@ -1795,4 +1795,9 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .\33xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
